seaqt/QtCore/gen_qcbormap.nim


proc fcQCborMap_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QCborMap_operatorAssign".}
proc fcQCborMap_swap(self: pointer, other: pointer): void {.importc: "QCborMap_swap".}
proc fcQCborMap_toCborValue(self: pointer): pointer {.importc: "QCborMap_toCborValue".}
proc fcQCborMap_size(self: pointer): int64 {.importc: "QCborMap_size".}
proc fcQCborMap_isEmpty(self: pointer): bool {.importc: "QCborMap_isEmpty".}
proc fcQCborMap_clear(self: pointer): void {.importc: "QCborMap_clear".}
proc fcQCborMap_keys(self: pointer): struct_seaqt_array {.importc: "QCborMap_keys".}
proc fcQCborMap_valueQint64(self: pointer, key: clonglong): pointer {.importc: "QCborMap_value_qint64".}
proc fcQCborMap_value_QString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborMap_value_QString".}
proc fcQCborMap_value_QCborValue(self: pointer, key: pointer): pointer {.importc: "QCborMap_value_QCborValue".}
proc fcQCborMap_operatorSubscriptConstQint64(self: pointer, key: clonglong): pointer {.importc: "QCborMap_operatorSubscript_const_qint64".}
proc fcQCborMap_operatorSubscriptConstCQString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborMap_operatorSubscript_const_cQString".}
proc fcQCborMap_operatorSubscriptConstCQCborValue(self: pointer, key: pointer): pointer {.importc: "QCborMap_operatorSubscript_const_cQCborValue".}
proc fcQCborMap_operatorSubscriptQint64(self: pointer, key: clonglong): pointer {.importc: "QCborMap_operatorSubscript_qint64".}
proc fcQCborMap_operatorSubscriptCQString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborMap_operatorSubscript_cQString".}
proc fcQCborMap_operatorSubscriptCQCborValue(self: pointer, key: pointer): pointer {.importc: "QCborMap_operatorSubscript_cQCborValue".}
proc fcQCborMap_takeQint64(self: pointer, key: clonglong): pointer {.importc: "QCborMap_take_qint64".}
proc fcQCborMap_take_QString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborMap_take_QString".}
proc fcQCborMap_take_QCborValue(self: pointer, key: pointer): pointer {.importc: "QCborMap_take_QCborValue".}
proc fcQCborMap_removeQint64(self: pointer, key: clonglong): void {.importc: "QCborMap_remove_qint64".}
proc fcQCborMap_remove_QString(self: pointer, key: struct_seaqt_string): void {.importc: "QCborMap_remove_QString".}
proc fcQCborMap_remove_QCborValue(self: pointer, key: pointer): void {.importc: "QCborMap_remove_QCborValue".}
proc fcQCborMap_containsQint64(self: pointer, key: clonglong): bool {.importc: "QCborMap_contains_qint64".}
proc fcQCborMap_contains_QString(self: pointer, key: struct_seaqt_string): bool {.importc: "QCborMap_contains_QString".}
proc fcQCborMap_contains_QCborValue(self: pointer, key: pointer): bool {.importc: "QCborMap_contains_QCborValue".}
proc fcQCborMap_compare(self: pointer, other: pointer): cint {.importc: "QCborMap_compare".}
proc fcQCborMap_operatorEqual(self: pointer, other: pointer): bool {.importc: "QCborMap_operatorEqual".}
proc fcQCborMap_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QCborMap_operatorNotEqual".}
proc fcQCborMap_operatorLesser(self: pointer, other: pointer): bool {.importc: "QCborMap_operatorLesser".}
proc fcQCborMap_begin(self: pointer): pointer {.importc: "QCborMap_begin".}
proc fcQCborMap_constBegin(self: pointer): pointer {.importc: "QCborMap_constBegin".}
proc fcQCborMap_beginConst(self: pointer): pointer {.importc: "QCborMap_begin_const".}
proc fcQCborMap_cbegin(self: pointer): pointer {.importc: "QCborMap_cbegin".}
proc fcQCborMap_endX(self: pointer): pointer {.importc: "QCborMap_end".}
proc fcQCborMap_constEnd(self: pointer): pointer {.importc: "QCborMap_constEnd".}
proc fcQCborMap_endConst(self: pointer): pointer {.importc: "QCborMap_end_const".}
proc fcQCborMap_cend(self: pointer): pointer {.importc: "QCborMap_cend".}
proc fcQCborMap_erase_QCborMapIterator(self: pointer, it: pointer): pointer {.importc: "QCborMap_erase_QCborMap_iterator".}
proc fcQCborMap_erase_QCborMapConstIterator(self: pointer, it: pointer): pointer {.importc: "QCborMap_erase_QCborMap_const_iterator".}
proc fcQCborMap_extract_QCborMapIterator(self: pointer, it: pointer): pointer {.importc: "QCborMap_extract_QCborMap_iterator".}
proc fcQCborMap_extract_QCborMapConstIterator(self: pointer, it: pointer): pointer {.importc: "QCborMap_extract_QCborMap_const_iterator".}
proc fcQCborMap_empty(self: pointer): bool {.importc: "QCborMap_empty".}
proc fcQCborMap_findQint64(self: pointer, key: clonglong): pointer {.importc: "QCborMap_find_qint64".}
proc fcQCborMap_findCQString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborMap_find_cQString".}
proc fcQCborMap_findCQCborValue(self: pointer, key: pointer): pointer {.importc: "QCborMap_find_cQCborValue".}
proc fcQCborMap_constFindQint64(self: pointer, key: clonglong): pointer {.importc: "QCborMap_constFind_qint64".}
proc fcQCborMap_constFind_QString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborMap_constFind_QString".}
proc fcQCborMap_constFind_QCborValue(self: pointer, key: pointer): pointer {.importc: "QCborMap_constFind_QCborValue".}
proc fcQCborMap_findConstQint64(self: pointer, key: clonglong): pointer {.importc: "QCborMap_find_const_qint64".}
proc fcQCborMap_findConstCQString(self: pointer, key: struct_seaqt_string): pointer {.importc: "QCborMap_find_const_cQString".}
proc fcQCborMap_findConstCQCborValue(self: pointer, key: pointer): pointer {.importc: "QCborMap_find_const_cQCborValue".}
proc fcQCborMap_insertQint64_QCborValue(self: pointer, key: clonglong, value_x: pointer): pointer {.importc: "QCborMap_insert_qint64_QCborValue".}
proc fcQCborMap_insert_QString_QCborValue(self: pointer, key: struct_seaqt_string, value_x: pointer): pointer {.importc: "QCborMap_insert_QString_QCborValue".}
proc fcQCborMap_insert_QCborValue_QCborValue(self: pointer, key: pointer, value_x: pointer): pointer {.importc: "QCborMap_insert_QCborValue_QCborValue".}
proc fcQCborMap_insert_QCborMapValueType(self: pointer, v: struct_seaqt_map): pointer {.importc: "QCborMap_insert_QCborMap_value_type".}
proc fcQCborMap_fromVariantMap(map: struct_seaqt_map): pointer {.importc: "QCborMap_fromVariantMap".}
proc fcQCborMap_fromVariantHash(hash: struct_seaqt_map): pointer {.importc: "QCborMap_fromVariantHash".}
proc fcQCborMap_fromJsonObject(o: pointer): pointer {.importc: "QCborMap_fromJsonObject".}
proc fcQCborMap_toVariantMap(self: pointer): struct_seaqt_map {.importc: "QCborMap_toVariantMap".}
proc fcQCborMap_toVariantHash(self: pointer): struct_seaqt_map {.importc: "QCborMap_toVariantHash".}
proc fcQCborMap_toJsonObject(self: pointer): pointer {.importc: "QCborMap_toJsonObject".}
proc fcQCborMap_new(): ptr cQCborMap {.importc: "QCborMap_new".}
proc fcQCborMap_new2(fromVal: pointer): ptr cQCborMap {.importc: "QCborMap_new_from".}
proc fcQCborMapIterator_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QCborMap__Iterator_operatorAssign".}
proc fcQCborMapIterator_operatorMultiply(self: pointer): struct_seaqt_map {.importc: "QCborMap__Iterator_operatorMultiply".}
proc fcQCborMapIterator_operatorMinusGreater(self: pointer): pointer {.importc: "QCborMap__Iterator_operatorMinusGreater".}
proc fcQCborMapIterator_key(self: pointer): pointer {.importc: "QCborMap__Iterator_key".}
proc fcQCborMapIterator_value(self: pointer): pointer {.importc: "QCborMap__Iterator_value".}
proc fcQCborMapIterator_operatorEqual_QCborMap_Iterator(self: pointer, o: pointer): bool {.importc: "QCborMap__Iterator_operatorEqual_QCborMap_Iterator".}
proc fcQCborMapIterator_operatorNotEqual_QCborMap_Iterator(self: pointer, o: pointer): bool {.importc: "QCborMap__Iterator_operatorNotEqual_QCborMap_Iterator".}
proc fcQCborMapIterator_operatorLesser_QCborMap_Iterator(self: pointer, other: pointer): bool {.importc: "QCborMap__Iterator_operatorLesser_QCborMap_Iterator".}
proc fcQCborMapIterator_operatorLesserOrEqual_QCborMap_Iterator(self: pointer, other: pointer): bool {.importc: "QCborMap__Iterator_operatorLesserOrEqual_QCborMap_Iterator".}
proc fcQCborMapIterator_operatorGreater_QCborMap_Iterator(self: pointer, other: pointer): bool {.importc: "QCborMap__Iterator_operatorGreater_QCborMap_Iterator".}
proc fcQCborMapIterator_operatorGreaterOrEqual_QCborMap_Iterator(self: pointer, other: pointer): bool {.importc: "QCborMap__Iterator_operatorGreaterOrEqual_QCborMap_Iterator".}
proc fcQCborMapIterator_operatorEqual_QCborMap_ConstIterator(self: pointer, o: pointer): bool {.importc: "QCborMap__Iterator_operatorEqual_QCborMap_ConstIterator".}
proc fcQCborMapIterator_operatorNotEqual_QCborMap_ConstIterator(self: pointer, o: pointer): bool {.importc: "QCborMap__Iterator_operatorNotEqual_QCborMap_ConstIterator".}
proc fcQCborMapIterator_operatorLesser_QCborMap_ConstIterator(self: pointer, other: pointer): bool {.importc: "QCborMap__Iterator_operatorLesser_QCborMap_ConstIterator".}
proc fcQCborMapIterator_operatorLesserOrEqual_QCborMap_ConstIterator(self: pointer, other: pointer): bool {.importc: "QCborMap__Iterator_operatorLesserOrEqual_QCborMap_ConstIterator".}
proc fcQCborMapIterator_operatorGreater_QCborMap_ConstIterator(self: pointer, other: pointer): bool {.importc: "QCborMap__Iterator_operatorGreater_QCborMap_ConstIterator".}
proc fcQCborMapIterator_operatorGreaterOrEqual_QCborMap_ConstIterator(self: pointer, other: pointer): bool {.importc: "QCborMap__Iterator_operatorGreaterOrEqual_QCborMap_ConstIterator".}
proc fcQCborMapIterator_operatorPlusPlus(self: pointer): pointer {.importc: "QCborMap__Iterator_operatorPlusPlus".}
proc fcQCborMapIterator_operatorPlusPlusInt(self: pointer, param1: cint): pointer {.importc: "QCborMap__Iterator_operatorPlusPlus_int".}
proc fcQCborMapIterator_operatorMinusMinus(self: pointer): pointer {.importc: "QCborMap__Iterator_operatorMinusMinus".}
proc fcQCborMapIterator_operatorMinusMinusInt(self: pointer, param1: cint): pointer {.importc: "QCborMap__Iterator_operatorMinusMinus_int".}
proc fcQCborMapIterator_operatorPlusAssign(self: pointer, j: int64): pointer {.importc: "QCborMap__Iterator_operatorPlusAssign".}
proc fcQCborMapIterator_operatorMinusAssign(self: pointer, j: int64): pointer {.importc: "QCborMap__Iterator_operatorMinusAssign".}
proc fcQCborMapIterator_operatorPlus(self: pointer, j: int64): pointer {.importc: "QCborMap__Iterator_operatorPlus".}
proc fcQCborMapIterator_operatorMinusQsizetype(self: pointer, j: int64): pointer {.importc: "QCborMap__Iterator_operatorMinus_qsizetype".}
proc fcQCborMapIterator_operatorMinus_QCborMap_Iterator(self: pointer, j: pointer): int64 {.importc: "QCborMap__Iterator_operatorMinus_QCborMap_Iterator".}
proc fcQCborMapIterator_new(): ptr cQCborMapIterator {.importc: "QCborMap__Iterator_new".}
proc fcQCborMapIterator_new2(fromVal: pointer): ptr cQCborMapIterator {.importc: "QCborMap__Iterator_new_from".}
proc fcQCborMapConstIterator_operatorAssign(self: pointer, fromVal: pointer): void {.importc: "QCborMap__ConstIterator_operatorAssign".}
proc fcQCborMapConstIterator_operatorMultiply(self: pointer): struct_seaqt_map {.importc: "QCborMap__ConstIterator_operatorMultiply".}
proc fcQCborMapConstIterator_operatorMinusGreater(self: pointer): pointer {.importc: "QCborMap__ConstIterator_operatorMinusGreater".}
proc fcQCborMapConstIterator_key(self: pointer): pointer {.importc: "QCborMap__ConstIterator_key".}
proc fcQCborMapConstIterator_value(self: pointer): pointer {.importc: "QCborMap__ConstIterator_value".}
proc fcQCborMapConstIterator_operatorEqual_QCborMap_Iterator(self: pointer, o: pointer): bool {.importc: "QCborMap__ConstIterator_operatorEqual_QCborMap_Iterator".}
proc fcQCborMapConstIterator_operatorNotEqual_QCborMap_Iterator(self: pointer, o: pointer): bool {.importc: "QCborMap__ConstIterator_operatorNotEqual_QCborMap_Iterator".}
proc fcQCborMapConstIterator_operatorLesser_QCborMap_Iterator(self: pointer, other: pointer): bool {.importc: "QCborMap__ConstIterator_operatorLesser_QCborMap_Iterator".}
